--- a/style.css
+++ b/style.css
@@ -2,3 +2,18 @@
     margin: 0;
     padding: 0;
 }
+.nav-container{
+    display: flex;
+    background-color: rgb(211, 131, 26);
+    padding: 20px;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.menus{
+    display: flex;
+     gap: 30px;
+     list-style: none;
+     font-size:27px;
+     
+}
